; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_crltest.c_test_reuse_crl.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_crltest.c_test_reuse_crl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kBasicCRL = common dso_local global i32 0, align 4
@kRevokedCRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_reuse_crl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_reuse_crl() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @kBasicCRL, align 4
  %5 = call i32* @CRL_from_strings(i32 %4)
  store i32* %5, i32** %1, align 8
  %6 = load i32, i32* @kRevokedCRL, align 4
  %7 = call i32* @glue2bio(i32 %6, i8** %2)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @PEM_read_bio_X509_CRL(i32* %8, i32** %1, i32* null, i32* null)
  store i32* %9, i32** %1, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @OPENSSL_free(i8* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @BIO_free(i32* %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @X509_CRL_free(i32* %14)
  ret i32 1
}

declare dso_local i32* @CRL_from_strings(i32) #1

declare dso_local i32* @glue2bio(i32, i8**) #1

declare dso_local i32* @PEM_read_bio_X509_CRL(i32*, i32**, i32*, i32*) #1

declare dso_local i32 @OPENSSL_free(i8*) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @X509_CRL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
